# sifaru_yusin_radical_generator

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tasks.py  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/workflows/: test.yml
app/: index.html  reducers.js  routes.js
app/containers/SifaruDeku/: KekuriaButton.js  actions.js  constants.js  index.js  messages.js  reducer.js  selectors.js
app/containers/SifaruDeku/tests/: actions.test.js  index.test.js  reducer.test.js  (+1 more)
app/containers/SingleRadical/: actions.js  constants.js  index.js  messages.js  reducer.js  selectors.js
app/models/: deku.js  deku_rules.js  deku_schema.js  deku_schema.pegjs  radical.js
app/tests/models/: deku.test.js
docs/: 0.2ed2e18ba412fe045b51.chunk.js  0.2fd0f28aa1a5f3830756.chunk.js  0.ff659ba0b2474caa484d.chunk.js  1.01b0ff984a3cee3ce134.chunk.js  1.ad8f26019e01d53807eb.chunk.js  1.c94d251f5ccaf704f029.chunk.js  index.css  index.html  main.050f2c5c896c487b0661.js  main.0bfb2aa40b7f49dde800.js  main.bb2e930b93dcc43ac851.js  main.bf74478cab64f119ec2d.js  main.js  sw.js
internals/webpack/: webpack.base.babel.js  webpack.prod.babel.js
sifaru_yusin/: DekuRule.g4  DekuRule.interp  DekuRuleLexer.interp  DekuRuleLexer.js  DekuRuleLexer.tokens  DekuRuleListener.js  DekuRuleParser.js  Kekuria.py  RuleDefinitions.py  deku.py
web-src/src-entrypoints/: precopy_appsync.sh
web-src/supervisor.conf.d/: supervisor.daemon.conf
(+5 files in other folders)
