[tool.poetry]
name = "sifaru_yusin_radical_generator"
version = "0.1.0"
description = "白色語語根ジェネレーター (sifarU yUsin ru dEku kekurIa)"
authors = ["ne_Sachirou <utakata.c4se@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-docstrings = "^1.5.0"
flake8-mypy = "^17.8.0"
transcrypt = "^3.7.16"
yamllint = "^1.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
